integration_test/kind/manifests/tailvoy-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: tailvoy-authz
  namespace: envoy-gateway-system
spec:
  selector:
    gateway.envoyproxy.io/owning-gateway-name: eg
    gateway.envoyproxy.io/owning-gateway-namespace: default
  ports:
    - port: 9001
      targetPort: 9001
      protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-securitypolicy-to-authz
  namespace: envoy-gateway-system
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: ""
      kind: Service
      name: tailvoy-authz
